# AdaptiPolish-Sys

./: .gitattributes  Main.py  README.md  config.json  t.npy  t.ply
PointCloud/: CameraService.py  Capture.py  PointCloudDefectDetector.py
PointCloud/client_scans/scan_20251108_202510_649143/: pointcloud.npy
PointCloud/output_results/: result.ply
Polish/: MyCobotGrindingController.py  Path_Planning.py  Polish_Manager.py
UI/: C-2.py  ManualControlDialog.py  ThreadPoolManager.py  default (3).jfif  main_window.py  manual_control_dialog.py  ydtest-3.py
UI/UART/: ydtest-3.py
UI/UART/example/: main.py
UI/UART/lib/: TOF_Sense.py
audio/: MicrophoneCalibrator.py  RecordingThread.py  audio_server.py  audio_system.py
audio_resources/: audio_mapping.json
dianyun/cse/: 点云ai复现教程.txt
dianyun/cse/ces/: t.ply
dianyun/cse/pointcloud_project/: t.ply
dianyun/cse/pointcloud_project/checkpoints/: pointnet_seg_best.pth
dianyun/cse/pointcloud_project/src/: CMakeLists.txt  api_pointcloud.py  dataset_pointcloud.py  eval_one_cloud.py  model_pointnet.py  pc_backend.cpp  pc_backend.py  pointcloud_api.py  sss_API.py  test_inference.py  test_model_forward.py  train_pointnet.py
hardware/: motor.py  robot_basic.py
llm/: deepseek_openai.py  deepseek_openai223 .py  deepseek_openai224.py  deepseek_openaigai.py
tts/: __init__.py  melotts_api.py
tts/models/: decoder-zh.onnx  encoder-zh.onnx
tts/text/: __init__.py  chinese.py  chinese_mix.py  english.py  symbols.py
vision/: CameraDetectionSystem.py  ONNXDetectionThread.py  camera_thread.py  contour_manager.py
(+364 files in other folders)
